Fixed image jumps and subreddit x-post

--- a/resources/style.css
+++ b/resources/style.css
@@ -184,3 +184,7 @@ select {
     -moz-appearance: none;
     transition: color 0.3s ease, background-color 0.3s ease, border-bottom-color 0.3s ease;
 }
+
+select:hover {
+    background-color: #eecb2e;
+}
